@@ -318,6 +318,7 @@ Release 0.92.0 - Unreleased
    HBASE-4513  NOTICES.txt refers to Facebook for Thrift
    HBASE-3130  [replication] ReplicationSource can't recover from session
                expired on remote clusters (Chris Trezzo via JD)
+   HBASE-4212  TestMasterFailover fails occasionally (Gao Jinchao)
 
   TESTS
    HBASE-4450  test for number of blocks read: to serve as baseline for expected
